k8s-manifests/applications/qbittorrent/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-web
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
  - name: webui
    port: 8080
    targetPort: 8080
