k8s-manifests/applications/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  type: NodePort
  selector:
    app: qbittorrent
  ports:
  - name: webui
    port: 8080
    targetPort: 8080
  - name: torrent-tcp
    port: 6881
    targetPort: 6881
    nodePort: 30881
  - name: torrent-udp
    port: 6881
    targetPort: 6881
    nodePort: 30881
    protocol: UDP
